--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,7 +6,7 @@
 @import "./position.css";
 
 body {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 40px auto;
     padding: 0 20px;
 }
@@ -88,17 +88,17 @@ p.note {
 }
 
 .badge-abs {
-    color: white;
-    background-color: #29abe0;
+    color: #222529c0;
+    background-color: #dfe2e593;
 }
 
 .badge-abs:hover {
-    background-color: #438bb7;
+    background-color: #c3c9cf;
 }
 
 .badge-bib {
-    color: #222529;
-    background-color: #dfe2e5;
+    color: #222529c0;
+    background-color: #dfe2e593;
 }
 
 .badge-bib:hover {
@@ -107,12 +107,12 @@ p.note {
 
 
 .badge-slides {
-    color: white;
-    background-color: green;
+    color: #222529c0;
+    background-color: #dfe2e593;
 }
 
 .badge-slides:hover {
-    background-color: rgba(0, 128, 0, 0.8);
+    background-color: #c3c9cf;
 }
 
 .badge-code {
@@ -125,12 +125,12 @@ p.note {
 }
 
 .badge-video {
-    color: #fcf0e4;
-    background-color: #d88d54;
+    color: #222529c0;
+    background-color: #dfe2e593;
 }
 
 .badge-video:hover {
-    background-color: #d88d54d4;
+    background-color: #c3c9cf;
 }
 
 .badge-demo {
